test/bad/generics/def07.px

func f<V>(v: V): V def
    return

f(0)
